fix: hide scrollbar for a cleaner UI experience

--- a/src/app.css
+++ b/src/app.css
@@ -5,3 +5,6 @@
 * {
   scrollbar-color: transparent transparent;
 }
+*::-webkit-scrollbar {
+  display: none;
+}
